--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ _________________________________________ -->
                     <li><strong>Name </strong>{{ profile.name }}</li>
                     <li><strong>Location </strong>{{ profile.location }}</li>
                     <li><strong>Country </strong>{{ profile.country }}</li>
+                    <li><strong>Zodiac </strong>{{ profile.zodiac }}</li>
+                    <li><strong>Chinese Zodiac </strong>{{ profile.chinese_zodiac }}</li>
                     <li><strong>Email </strong><a href="mailto:{{ profile.email }}?subject=Hi I saw your resume online">{{ profile.email }}</a></li>
               
                 </ul>
