--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ _________________________________________ -->
                     <li><strong>Location </strong>{{ profile.location }}</li>
                     <li><strong>Country </strong>{{ profile.country }}</li>
                     <li><strong>Zodiac </strong>{{ profile.zodiac }}</li>
-                    <li><strong>Chinese Zodiac </strong>{{ profile.chinese_zodiac }}</li>
+                    <li><strong>Born </strong>{{ profile.born }}</li>
                     <li><strong>Email </strong><a href="mailto:{{ profile.email }}?subject=Hi I saw your resume online">{{ profile.email }}</a></li>
               
                 </ul>
