--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ _________________________________________ -->
                     <li><strong>Country </strong>{{ profile.country }}</li>
                     <li><strong>Zodiac </strong>{{ profile.zodiac }}</li>
                     <li><strong>Born </strong>{{ profile.born }}</li>
+                    <li><strong>Personality </strong>{{ profile.personality }}</li>
                     <li><strong>Email </strong><a href="mailto:{{ profile.email }}?subject=Hi I saw your resume online">{{ profile.email }}</a></li>
               
                 </ul>
