--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ _________________________________________ -->
     <div class="container" align="center">  
         <div class="headline" align="center">
         <p><span>Outside</span></p>
-        <h2>Interests</h2>
+        <h2>Interests & Affiliations</h2>
         </div>
     </div>
     
