--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ _________________________________________ -->
 <section class="u-full-width" id="education"> 
     <div class="container" align="center">  
         <div class="headline" align="center">
-            <p><span>Learning &amp; Training</span></p>
+            <p><span>Schooling &amp; Coursework</span></p>
             <h2>Education</h2>
         </div>
     </div>
@@ -108,8 +108,8 @@ _________________________________________ -->
 <section class="u-full-width" id="awards"> 
     <div class="container" align="center">  
         <div class="headline" align="center">
-            <p><span>Recognition</span></p>
-            <h2>Honours &amp; Awards</h2>
+            <p><span>Learning &amp; Training</span></p>
+            <h2>Certifications</h2>
         </div>
     </div>
     
