--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ _________________________________________ -->
             
             
  
-{% for award in site.award reversed %}
+{% for award in site.award %}
     <div class="row">  
         <div class="five columns">
                 <h2 class="date">{{ award.issued }}</h2>
