--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ _________________________________________ -->
     </div>
 </section>
     
-<section class="u-full-width" id="certificates"> 
+<section class="u-full-width" id="award"> 
     <div class="container" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
