--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<meta name="robots" content="noindex">
 
 <div class="container" align="center">  
 <div class="headline">
