--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ _________________________________________ -->
 
                     <li><strong>Name </strong>{{ profile.name }}</li>
                     <li><strong>Location </strong>{{ profile.location }}</li>
-                    <li><strong>Country </strong>{{ profile.country }}</li>
+                    <li><strong>Language </strong>{{ profile.language }}</li>
                     <li><strong>Zodiac </strong>{{ profile.zodiac }}</li>
                     <li><strong>Born </strong>{{ profile.born }}</li>
                     <li><strong>Personality </strong>{{ profile.personality }}</li>
