--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ _________________________________________ -->
     
     <div class="container">
         
-{% for skills in site.skills %}
+{% for skills in site.skills reversed %}
     <div class="row">  
         <div class="five columns">
                 <h2 class="date">{{ skills.title }}</h2>
