--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ _________________________________________ -->
     <div class="row">
             <div class="five columns">
                 <h2 class="date">{{ projects.period }}</h2>
-                <h4 class="project">{{ projects.project }}</h4>
+                <h4 class="project">{{ projects.projecttype }}</h4>
         </div>
         <div class="seven columns">
 <!-- Info below is drawn in from the YAML title: and the content from the actual .md -->
