--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ _________________________________________ -->
 </div>      
     
 
+
+<!-- Experience -->
+
 <section class="u-full-width" id="experience"> 
 <!-- Info below is the section heading and tagline -->
     <div class="container" align="center">  
@@ -91,7 +94,7 @@ _________________________________________ -->
     <div class="row">
             <div class="five columns">
                 <h2 class="date">{{ projects.period }}</h2>
-                <h4 class="project">{{ projects.projecttype }}</h4>
+                <h4 class="projecttype">{{ projects.projecttype }}</h4>
         </div>
         <div class="seven columns">
 <!-- Info below is drawn in from the YAML title: and the content from the actual .md -->
