--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ _________________________________________ -->
 
     <div class="container" align="center">  
         <div class="headline" align="center">
-        <p><span>Research Papers</span></p>
+        <p><span>Downloadable</span></p>
         <h2>Publications</h2>
         </div>
     </div>
