--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@ _________________________________________ -->
 {% for physics in site.physics %}
     <div class="row">  
         <div class="five columns">
-                <h2 class="date">{{ physics.title }}</h2>
+           <!-- <h2 class="date">{{ physics.title }}</h2> -->
+                <h2>{{ physics.title }}</h2>
             </div>
     </div>
             
