--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ _________________________________________ -->
     </div>
             
             
- <!-- Physics Of Things -->
+<!-- Added Physics of things within Experience container -->
  <!-- <section class="u-full-width" id="physics"> -->        
         <div class="container" align="center">  
         <div class="headline" align="center">
