--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@ _________________________________________ -->
  <!-- <section class="u-full-width" id="physics"> -->        
         <div class="container" align="center">  
         <div class="headline" align="center">
-        <p><span>My Daily Clockwork</span></p>
-        <h2>Physics Of Things</h2>
+        <p><span>Daily Clockwork</span></p>
+        <h2>My Physics Of Things</h2>
         </div>
         </div>
     
