--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ _________________________________________ -->
     <div class="row">  
         <div class="seven columns" align="center">
            <!-- <h2 class="date">{{ physics.title }}</h2> -->
-                <h2>{{ physics.title }}</h2>
+                <h2>{{ physics.content }}</h2>
         </div>
     </div>
 {% endfor %} 
