--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ _________________________________________ -->
     <div class="container">
 {% for physics in site.physics %}
     <div class="row">  
-        <div class="seven columns" align="center">
+        <div class="twelve columns" align="center">
            <!-- <h2 class="date">{{ physics.title }}</h2> -->
                 <h2>{{ physics.content }}</h2>
         </div>
