--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@ _________________________________________ -->
     </div>
 {% endfor %} 
     </div>
-            
+</section>
             
 <!-- Added Physics of things within Interest container -->
- <!-- <section class="u-full-width" id="physics"> -->        
+ <section class="u-full-width" id="physics">      
         <div class="container" align="center">  
         <div class="headline" align="center">
         <p><span>Daily Clockwork</span></p>
