--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@ _________________________________________ -->
     </div>
 {% endfor %} 
     </div>
+        
+<!-- Added line break -->
+    <br>
+    </br>
                         
 </section>
 
