--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ _________________________________________ -->
         <p class="authors">{{ publications.authors }}</p>
             
         {{ publications.content}}
-        <p><a href="{{ publications.link }}" class="button button-primary">Download</a></p>
+        <p><a href="{{ publications.link }}" target="_blank" class="button button-primary">Download</a></p>
         </div>
     </div>
         
