--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@ _________________________________________ -->
                 <h2 class="date">{{ education.period }}</h2>
                 <h4 class="institution">{{ education.institution }}</h4>
             </div>
-         <div class="seven columns">
+            <div class="seven columns">
             <h3>{{ education.title }}</h3>
-        </div>
+            </div>
+            {{ education.content }}
     </div>
  
 {% endfor %}                
