--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ _________________________________________ -->
     <div class="container" align="center">  
     <div class="headline" align="center">
         <p><span>Professional Background</span></p>
-        <h2>Work Experience</h2>
+        <h2>Exposure</h2>
     </div>
     </div>
 
