--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ _________________________________________ -->
                     <li><strong>Zodiac </strong>{{ profile.zodiac }}</li>
                     <li><strong>Born </strong>{{ profile.born }}</li>
                     <li><strong>Personality </strong>{{ profile.personality }}</li>
-                    <li><strong>Email </strong><a href="mailto:{{ profile.email }}?subject=Hi I saw your resume online">{{ profile.email }}</a></li>
+                    <li><strong>Favorite Song </strong>{{ profile.favoritesong }}</li>
+               <!-- <li><strong>Email </strong><a href="mailto:{{ profile.email }}?subject=Hi I saw your resume online">{{ profile.email }}</a></li> -->
               
                 </ul>
             </div>
