--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
                     <li><strong>Zodiac </strong>{{ profile.zodiac }}</li>
                     <li><strong>Born </strong>{{ profile.born }}</li>
                     <li><strong>Personality </strong>{{ profile.personality }}</li>
-                    <li><strong>Favorite Song </strong>{{ profile.favoritesong }}</li>
+                    <li><strong>Favorite Song </strong><a href="https://youtu.be/VI57QHL6ge0">Always With Me, Always With You by Joe Satriani</a></li>
                             
                 </ul>
             </div>
