--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="container" align="center">  
 <div class="headline">
         <p><span>Who Am I?</span></p>
-        <h2>Personal Details</h2>
+        <h2>My Journey So Far</h2>
 </div> 
 </div>
 
