--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ layout: default
         <div class="container" align="center">  
         <div class="headline" align="center">
         <p><span>Daily Clockwork</span></p>
-        <h2>My Physics Of Things</h2>
+        <h2>My Physics Of Things | POT</h2>
         </div>
         </div>
     
