--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ layout: default
     </div>
     </div>
     <div class="container">    
-{% for projects in site.projects reversed %}
+{% for projects in site.projects %}
 <!-- Info below is drawn in from the YAML front end -->
     <div class="row">
             <div class="five columns">
