--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ layout: default
     <div class="container" align="center">  
         <div class="headline" align="center">
         <p><span>Away From My Desk</span></p>
-        <h2>Interests & Affiliations</h2>
+        <h2>Backstage</h2>
         </div>
     </div>
     
