--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ layout: default
     <div class="container" align="center">  
         <div class="headline" align="center">
         <p><span>Areas of Expertise</span></p>
-        <h2>Skills</h2>
+        <h2>Practice</h2>
         </div>
     </div>
     
