--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ layout: default
 
 <!-- Awards -->
 
-<section class="u-full-width" id="awards"> 
+<section class="u-full-width parallax1" id="awards"> 
     <div class="container" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
