--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ layout: default
 
 <!-- Awards -->
 
-<section class="u-full-width parallax1" id="awards"> 
-    <div class="container" align="center">  
+<section class="u-full-width" id="awards"> 
+    <div class="container  parallax1" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
             <h2>Certifications</h2>
