--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@ layout: default
 <!-- Awards -->
 
 <section class="u-full-width parallax1" id="awards"> 
-    <div class="container" align="center">  
+    <div class="container darkbg" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
             <h2>Certifications</h2>
         </div>
     </div>
     
-    <div class="container">
+    <div class="container darkbg">
  
 {% for certificates in site.certificates reversed %}
     <div class="row">  
