--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@ layout: default
 
 <!-- Awards -->
 
-<section class="u-full-width parallax1" id="awards"> 
-    <div class="container darkbg" align="center">  
+<section class="u-full-width parallax1 darkbg" id="awards"> 
+    <div class="container" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
             <h2>Certifications</h2>
         </div>
     </div>
     
-    <div class="container darkbg">
+    <div class="container">
  
 {% for certificates in site.certificates reversed %}
     <div class="row">  
