--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ layout: default
 
 <!-- Awards -->
 
-<section class="u-full-width parallax1 darkbg" id="awards"> 
+<section class="u-full-width parallax1" id="awards"> 
+<img class="darkbg" src="../images/darkbg.png" />
     <div class="container" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
