--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ layout: default
 <!-- Awards -->
 
 <section class="u-full-width parallax1" id="awards"> 
-<img class="darkbg" src="../images/darkbg.png" />
+<img src="../images/darkbg.png" class="darkbg" >
     <div class="container" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
