--- a/index.html
+++ b/index.html
@@ -140,16 +140,15 @@ layout: default
 <!-- Awards -->
 
 <section class="u-full-width parallax1" id="awards"> 
-    <div class="container" align="center">  
-    <img src="/website/images/darkbg.png" class="darkbg">
+    <div class="container darkbg" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
             <h2>Certifications</h2>
         </div>
     </div>
     
-    <div class="container">
-    <img src="/website/images/darkbg.png" class="darkbg">
+    <div class="container darkbg">
+            
 {% for certificates in site.certificates reversed %}
     <div class="row">  
         <div class="five columns">
