--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@ layout: default
 
 <!-- Awards -->
 
-<section class="u-full-width darkbg">
 <section class="u-full-width parallax1" id="awards"> 
-    <div class="container" align="center">  
+<div class="u-full-width darkbg">
+        <div class="container" align="center">  
         <div class="headline" align="center">
             <p><span>Learning &amp; Training</span></p>
             <h2>Certifications</h2>
@@ -163,7 +163,7 @@ layout: default
 
 {% endfor %} 
     </div>
-</section>
+</div>
 </section>
     
 
