--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ layout: default
         </div>
     </div>
     <div class="container">
-{% for contributions in site.contributions reversed %}
+{% for contributions in site.contributions %}
     <div class="row">  
         <div class="five columns">
                 <h2 class="date">{{ contributions.published-date }}</h2>
