--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ layout: default
             <h2>Contributions</h2>
         </div>
         </div>
-        <h5>The illiteracy rate in the Phillipines is 8.4% in 1999 and is still increasing. This is roughly 6.7million people who cannot read and write.</h5>
+        <h5>The <a href="https://psa.gov.ph/content/functional-literacy-rate-estimated-916-percent-2019" target="_blank">illiteracy rate in the Phillipines</a> is 8.4% in 1999 and is still increasing. This is roughly 6.7million people who cannot read and write.</h5>
         <h5>If we remain apathetic towards this growing concern, then how will our fellow countrymen find hope of a better future?</h5>
         <h5>This is my way of taking a stand. I aim to make an impact - big or small.</h5>
     <div class="container">
