--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@ layout: default
             <h2>Contributions</h2>
         </div>
         </div>
-                <div class="twelve columns" align="center">
-                <h7>The <a href="https://psa.gov.ph/content/functional-literacy-rate-estimated-916-percent-2019" target="_blank">illiteracy rate in the Phillipines</a> is 8.4% in 1999 and is still increasing. 
-                This is roughly 6.7million people who cannot read and write. If we remain apathetic towards this growing concern, then how will our fellow countrymen find hope of a better future? 
-                This is my way of taking a stand. I aim to make an impact - big or small. </h7>
+        {% for endeavor in site.endeavor %}
+                <div class="ten columns" align="center">
+                {{ endeavor.content}}
                 </div>   
+        {% endfor %} 
     <div class="container">
 {% for contributions in site.contributions %}
     <div class="row">  
