--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ layout: default
         </div>
         </div>
         {% for endeavor in site.endeavor %}
-                <div class="ten columns" align="center">
+                <div class="eight columns" align="center">
                 {{ endeavor.content}}
                 </div>   
         {% endfor %} 
