--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ layout: default
 </div>
 <br></br>
 <!-- Added BTT button -->
-<button onclick="topFunction()" id="myBtn" title="Back to top">Top</button>
+<button id="myBtn"><a href="#top" style="color: white">Top</a></button>
 
 </section>
 
