--- a/index.html
+++ b/index.html
@@ -298,5 +298,6 @@ layout: default
 </section>
 
 <!-- Added BTT button -->
+<div class="twelve columns">
 <button id="myBtn"><a href="#top" style="color: white">Top</a></button>
-
+</div>
