--- a/index.html
+++ b/index.html
@@ -293,12 +293,13 @@ layout: default
 <!-- Added line break -->
     <br></br>
 </div>
+<!-- Added BTT button -->
+<div>
+<button id="myBtn"><a href="#top" style="color: white">Top</a></button>
+</div>
 <br></br>
 
 </section>
 
-<!-- Added BTT button -->
-<div class="twelve columns">
-<button id="myBtn"><a href="#top" style="color: white">Top</a></button>
-</div>
+
 
