--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ layout: default
     <br></br>
 </div>
 <!-- Added BTT button -->
-<div class="u-full-width">
+<div class="eleven columns">
 <button id="myBtn"><a href="#top" style="color: white">Top</a></button>
 </div>
 
