--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ layout: default
 </div>
 <!-- Added BTT button -->
 <div class="u-full-width" align="right">
-<button class="animation-bottom" id="myBtn"><a href="#top" style="color: white">Top</a></button>
+<button id="myBtn"><a href="#top" style="color: white">Top</a></button>
 </div>
 
 </section>
