--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ layout: default
     </div>
 
 {% endfor %}
-        <input type="button" onClick="document.getElementById('experience').scrollIntoView();" />
+        <input type="button" onClick="document.getElementById('experience').scrollIntoView(); align="right" />
+        <a href="experience" class="button">scroll down</a>
 </div>      
     
 
