--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
 
 {% endfor %}
         <input type="button" onClick="document.getElementById('experience').scrollIntoView(); align="right" />
-        <a href="experience" class="button">scroll down</a>
+        <a href="#experience" class="button">scroll down</a>
 </div>      
     
 
