--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
 <div class="headline">
         <p><span>Who Am I?</span></p>
         <h2>My Journey So Far</h2>
+        <a href="#experience" class="button" align="right">scroll down</a>
 </div> 
 </div>
 
@@ -38,8 +39,7 @@ layout: default
     </div>
 
 {% endfor %}
-        <input type="button" onClick="document.getElementById('experience').scrollIntoView(); align="right" />
-        <a href="#experience" class="button">scroll down</a>
+
 </div>      
     
 
