--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <h2>My Journey So Far</h2>
 </div> 
 </div>
-        <a href="#experience" class="button" align="right">scroll down</a>
+        <a href="#experience" class="button-scroll" align="right">scroll down</a>
 
 <!-- _______________________ Profile Section _______________________ -->
 
