--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <h2>My Journey So Far</h2>
 </div> 
 </div>
-        <a href="#experience" class="button-scroll">scroll down</a>
+        <!-- <a href="#experience" class="button-scroll">scroll down</a> -->
 
 <!-- _______________________ Profile Section _______________________ -->
 
