--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <meta name="robots" content="noindex">
 
-<div class="container fade-in" align="center">  
+<div class="container" align="center">  
 <div class="headline">
         <p><span>Who Am I?</span></p>
         <h2>My Journey So Far</h2>
