--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ layout: default
     <div class="row">  
         <div class="twelve columns" align="center">
                 <h2 class="date">{{ skills.title }}</h2>
-                <li>_________________________________________</li>
+                <div>________________________________________________________</div>
             </div>
     </div>
 {% endfor %} 
