--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ layout: default
 {% for skills in site.skills reversed %}
     <div class="row">  
         <div class="twelve columns" align="center">
-                <h3 class="date">{{ skills.title }}</h3>
+                <h3>{{ skills.title }}</h3>
                 <div>___________________________________________________</div>
             </div>
     </div>
