--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@ layout: default
 {% for skills in site.skills reversed %}
     <div class="row">  
         <div class="twelve columns" align="center">
-                <h3>{{ skills.title }}</h3>
-                <div>___________________________________________________</div>
-            </div>
+                <h3 class="date">{{ skills.title }}</h3>
+                <div class="twelve columns">___________________________________________________</div>
+        </div>
     </div>
 {% endfor %} 
     </div>
