--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ layout: default
         <div class="twelve columns" align="center">
                 <h3 class="date">{{ skills.title }}</h3>
         </div>
-                <div class="twelve columns">___________________________________________________</div>
+                <div class="twelve columns" align="center">___________________________________________________</div>
     </div>
 {% endfor %} 
     </div>
